Changes for 1.3.7:

 - fixed host.c, constant FALSE replaces by FAIL (Alexei)
 - fixed generation of events for unknown status of triggers (Alexei)
 - fixed processing of trigger statuses (Alexei)
 - fixed incorrect displaying of statuses in Monitoring->Triggers (Alexei)
 - fixed processing of integer items 'status' (Alexei)
 - fixed automatic reload of active checks by agent (Alexei)
 - added missing host template linkage in data.sql (Alexei)
 - fixed SQL error under PostgreSQL (Alexei)
 - fixed memory corruption in poller (Alexei)

Changes for 1.3.6:

 - added exporting of applications and valuemap linkage (Eugene)
 - new templates (Alexei)
 - support of host template actions (Eugene)
 - developed template synchronizator for ZABBIX server (Eugene)
 - fixed compilation of agent under OpenBSD (Alexei)
 - support of parameter LogFileSize (Alexei)
 - fixed configuration file reading for WinXX (Eugene)
 - fixed uname for WinXX (Eugene)
 - updated Spanish translation. Thanks to Ignacio Martin. (Alexei)
 - misc fixes for static linkage (Alexei, Eugene)
 - more strict processing of response codes of all passive checks (Alexei)
 - new logic for poller for unreachable hosts (Alexei)
 - fixed fatal error in cbutton.inc.php for some platforms (Alexei)
 - fixed zabbix_server's option -V (Alexei)
 - fixed compilation under Solaris (Alexei)
 - added discovery based on data received from ZABBIX and SNMP agents (Alexei)

Changes for 1.3.5:

 - removed support of autoregistration, use autodiscovery instead (Alexei) 
 - fixed creation of Sqlite schema (Alexei)
 - fixed dependences of deleted elements for actions (Eugene) 
 - developed slideshows (Eugene)
 - fixed carceling of frontend installation screen (Eugene)
 - fixed processing of COUNTER64 SNMP values (Alexei)
 - added frontend-side support of external checks. (Eugene)
 - fixed trigger dependencies for templated triggers (Eugene)
 - fixed support of 'curl' library (Eugene)
 - added suport of 'automake' v1.6 (Eugene)